# pyrensic

./: LICENSE  README.md  forensic.py  pyproject.toml  pyrensic.py  pyrensic_analysis.py  requirements.txt
regripper/: rip.pl  rip.pl.linux
