[tool.poetry]
name = "poetry-pyrensic"
version = "0.1.0"
description = ""
authors = ["Kaidoh <kaidohtips@proton.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
yaspin = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
